welcome/students/k8s/lecturer/yaniv/DELL/Piyush/ingress/bear.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bear-deployment
spec:
  selector:
    matchLabels:
      app: bear  
  replicas: 1 
  template: 
    metadata:
      labels:
        app: bear
    spec:
      containers:
      - name: bear
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
