welcome/students/k8s/lecturer/yaniv/DELL/Piyush/ingress/moose.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose-deployment
spec:
  selector:
    matchLabels:
      app: moose  
  replicas: 1
  template: 
    metadata:
      labels:
        app: moose
    spec:
      containers:
      - name: moose
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
