welcome/students/k8s/lecturer/yaniv/DELL/Piyush/ingress/bear-service.yaml
kind: Service      
apiVersion: v1     
metadata:
  name: bear-svc 
spec:
  selector:
    app: bear   
  ports:          
  - name: http-web    
    protocol: TCP
    port: 80
    targetPort: 80
