welcome/students/k8s/lecturer/yaniv/DELL/Piyush/ingress/moose-service.yaml
kind: Service      
apiVersion: v1     
metadata:
  name: moose-svc 
spec:
  selector:
    app: moose   
  ports:          
  - name: http-web    
    protocol: TCP
    port: 80
    targetPort: 80
